# AiC

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Network.cpp  OpusEncoder.cpp  com_vanxum_Aic_NetworkJni.h  com_vanxum_Aic_OpusJni.h
app/src/main/cpp/include/opus/: adaptor.h  audio_adpt.h  avcplus_adpt.h  hid_adpt.h  portable.h  vgtp_adpt.h  vmtl.h
app/src/main/java/com/vanxum/Aic/: ConnectManager.java  Ipconnect.java  MainRender.java  MyInputEvent.java  NetworkJni.java  NetworkManager.java  OpusJni.java  RemoteControl.java  RenderBoard.java  ShortByteUtil.java  myInterface.java
app/src/main/res/drawable/: checkbox.xml  dialog_item_bg.xml  dialog_item_color.xml  green_rounded.xml  main_background.xml  service_white_control_bg.xml  service_white_control_color.xml
app/src/main/res/layout/: activity_ipconnect.xml  activity_remote_control.xml  connectivity_main.xml  render_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
